
syntax = "proto3";

package aiserver.v1;

import "utils.proto";
import "cpp.proto";
import "lsp_subgraph.proto";

// 因为还不能检测是否依赖这个 proto 文件，所以先手动 import 一下
import "google/protobuf/timestamp.proto";





message PotentiallyCachedContextItem {
  ContextItem context_item = 1;
  string context_item_hash = 2;
  
}
  


message ContextStatusUpdate {
  ContextItemStatus context_item_statuses = 1;
  
}
  


message MissingContextItems {
  string missing_context_item_hashes = 2;
  
}
  


message ContextItemStatus {
  string context_item_hash = 1;
  bool shown_to_the_model = 2;
  float score = 3;
  float percentage_of_available_space = 4;
  PostGenerationEvaluation post_generation_evaluation = 5;
  
  enum PostGenerationEvaluation {
    POST_GENERATION_EVALUATION_UNSPECIFIED = 0;
    POST_GENERATION_EVALUATION_USEFUL = 1;
    POST_GENERATION_EVALUATION_USELESS = 2;
  }
  
}
  


message ContextItem {
  ContextIntent intent = 1;
  FileChunk file_chunk = 2;
  OutlineChunk outline_chunk = 3;
  CmdKSelection cmd_k_selection = 4;
  CmdKImmediateContext cmd_k_immediate_context = 5;
  CmdKQuery cmd_k_query = 6;
  CmdKQueryHistory cmd_k_query_history = 7;
  CustomInstructions custom_instructions = 8;
  GoToDefinitionResult go_to_definition_result = 9;
  DocumentationChunk documentation_chunk = 10;
  Lints lints = 11;
  ChatHistory chat_history = 12;
  NotebookCellOutput notebook_cell_output = 13;
  TerminalHistory terminal_history = 14;
  TerminalCmdKQuery terminal_cmd_k_query = 15;
  TerminalCmdKQueryHistory terminal_cmd_k_query_history = 16;
  SparseFileChunk sparse_file_chunk = 17;
  LspSubgraphChunk lsp_subgraph_chunk = 18;
  CommitNoteChunk commit_note_chunk = 19;
  FileDiffHistory file_diff_history = 20;
  CmdKQueryHistoryInDiffSession cmd_k_query_history_in_diff_session = 21;
  
  message FileChunk {
    string relative_workspace_path = 1;
    string chunk_contents = 2;
    int32 start_line_number = 3;
    
  }
    
  
  
  message SparseFileChunk {
    string relative_workspace_path = 1;
    Line lines = 2;
    int32 total_number_of_lines_in_file = 3;
    optional int32 cell_number = 4;
    
    message Line {
      string line = 1;
      int32 line_number = 2;
      
    }
      
  }
    
  
  
  message OutlineChunk {
    string relative_workspace_path = 1;
    string contents = 2;
    LineRange full_range = 3;
    
  }
    
  
  
  message CmdKSelection {
    string lines = 1;
    int32 start_line_number = 2;
    
  }
    
  
  
  message FileDiffHistory {
    CppFileDiffHistory cpp_file_diff_history = 1;
    int32 how_many_diffs_ago = 2;
    bool is_very_recent = 3;
    
  }
    
  
  
  message CmdKImmediateContext {
    string relative_workspace_path = 1;
    Line lines = 2;
    int32 total_number_of_lines_in_file = 3;
    optional int32 cell_number = 4;
    
    message Line {
      string line = 1;
      int32 line_number = 2;
      
    }
      
  }
    
  
  
  message CmdKQuery {
    string query = 1;
    
  }
    
  
  
  message TerminalCmdKQuery {
    string query = 1;
    
  }
    
  
  
  message TerminalCmdKQueryHistory {
    TerminalCmdKQuery query = 1;
    aiserver.v1.ContextItem.TerminalCmdKQueryHistory query_history = 2;
    string context_item_hashes = 5;
    string suggested_command = 6;
    
  }
    
  
  
  message CmdKQueryHistory {
    CmdKQuery query = 1;
    CmdKImmediateContext immediate_context = 2;
    CmdKSelection selection = 3;
    aiserver.v1.ContextItem.CmdKQueryHistory query_history = 4;
    string context_item_hashes = 5;
    optional int64 timestamp = 6;
    optional double timestamp_double = 7;
    
  }
    
  
  
  message CmdKQueryHistoryInDiffSession {
    PastCmdKQueryInDiffSession past_cmdk_queries = 1;
    double curr_timestamp_double = 3;
    
    message PastCmdKQueryInDiffSession {
      CmdKQuery query = 1;
      string relative_workspace_path = 2;
      optional bool cmdk_was_accepted = 5;
      double timestamp_double = 6;
      optional double timestamp_for_diff_interleaving = 7;
      optional string request_id = 8;
      
    }
      
  }
    
  
  
  message ChatHistory {
    string user_message = 1;
    string assistant_response = 2;
    aiserver.v1.ContextItem.ChatHistory chat_history = 3;
    bool active_for_cmd_k = 4;
    optional int64 timestamp = 5;
    optional double timestamp_double = 6;
    
  }
    
  
  
  message TerminalHistory {
    string history = 1;
    string cwd_full = 5;
    string cwd_relative_workspace_path = 6;
    bool active_for_cmd_k = 4;
    optional int64 timestamp = 7;
    optional double timestamp_double = 8;
    
  }
    
  
  
  message CustomInstructions {
    string instructions = 1;
    
  }
    
  
  
  message GoToDefinitionResult {
    string relative_workspace_path = 1;
    string line = 2;
    int32 line_number = 3;
    int32 column_number = 4;
    FileChunk definition_chunk = 5;
    
  }
    
  
  
  message DocumentationChunk {
    string doc_name = 1;
    string page_url = 2;
    string documentation_chunk = 3;
    float score = 4;
    
  }
    
  
  
  message Lints {
    string relative_workspace_path = 1;
    Lint lints = 2;
    Line context_lines = 3;
    
    message Line {
      string line = 1;
      int32 line_number = 2;
      
    }
      
  }
    
  
  
  message NotebookCellOutput {
    string relative_workspace_path = 1;
    string cell_output = 2;
    int32 cell_number = 3;
    
  }
    
  
  
  message LspSubgraphChunk {
    LspSubgraphFullContext lsp_subgraph_full_context = 1;
    
  }
    
  
  
  message CommitNoteChunk {
    string note = 1;
    
  }
    
}
  


message ContextIntent {
  Type type = 1;
  string uuid = 15;
  File file = 2;
  CodeSelection code_selection = 3;
  Lints lints = 5;
  RecentLocations recent_locations = 6;
  CmdKCurrentFile cmd_k_current_file = 8;
  CmdKQueryEtc cmd_k_query_etc = 9;
  TerminalCmdKDefaults terminal_cmd_k_defaults = 14;
  CmdKDefinitions cmd_k_definitions = 10;
  Documentation documentation = 11;
  CustomInstructions custom_instructions = 12;
  ChatHistory chat_history = 13;
  TerminalHistory terminal_history = 16;
  VisibleTabs visible_tabs = 17;
  LspSubgraph lsp_subgraph = 18;
  CommitNotes commit_notes = 19;
  DiffHistory diff_history = 20;
  PastCmdkConversationsInDiffSessions past_cmdk_messages_in_diff_sessions = 21;
  
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_USER_ADDED = 1;
    TYPE_AUTOMATIC = 2;
  }
  
  
  
  message Documentation {
    string documentation_identifier = 1;
    
  }
    
  
  
  message File {
    string relative_workspace_path = 1;
    Mode mode = 2;
    
    enum Mode {
      MODE_UNSPECIFIED = 0;
      MODE_FULL = 1;
      MODE_OUTLINE = 2;
      MODE_CHUNKS = 3;
    }
    
  }
    
  
  
  message CodeSelection {
    string relative_workspace_path = 1;
    SimpleRange potentially_out_of_date_range = 2;
    string text = 3;
    
  }
    
  
  
  message Symbol {
    DocumentSymbol symbol = 1;
    string relative_workspace_path = 2;
    
  }
    
  
  
  message CommitNotes {
    
  }
    
  
  
  message Lints {
    CmdKScope cmdk_scope = 1;
    FileScope file_scope = 2;
    LintSeverity filter_to_severities = 3;
    
    message CmdKScope {
      
    }
      
    
    
    message FileScope {
      string relative_workspace_path = 1;
      optional LineRange filter_range = 2;
      
    }
      
  }
    
  
  
  message RecentLocations {
    optional double timestamp = 2;
    
  }
    
  
  
  message PastCmdkConversationsInDiffSessions {
    
  }
    
  
  
  message VisibleTabs {
    
  }
    
  
  
  message CodebaseChunks {
    
  }
    
  
  
  message CmdKCurrentFile {
    
  }
    
  
  
  message CmdKQueryEtc {
    
  }
    
  
  
  message CustomInstructions {
    
  }
    
  
  
  message CmdKDefinitions {
    
  }
    
  
  
  message ChatHistory {
    
  }
    
  
  
  message DiffHistory {
    
  }
    
  
  
  message TerminalCmdKDefaults {
    
  }
    
  
  
  message TerminalHistory {
    int32 instance_id = 1;
    bool active_for_cmd_k = 2;
    optional bool use_active_instance_as_fallback = 3;
    
  }
    
  
  
  message LspSubgraph {
    
  }
    
}
  

